--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,6 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
